--- a/views/index.haml
+++ b/views/index.haml
@@ -1,12 +1,12 @@
 #header
-	%h1 TAD '012 twiitit
+	%h1 Tweets for #tad012
 #content
 	%table
 		%thead
 			%tr
-				%th Käyttäjä
-				%th Twiitti
-				%th Milloin
+				%th User
+				%th Tweet
+				%th When
 		%tbody
 		- @tweets.each do |tweet|
 			%tr
