--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,5 +1,9 @@
 %html
-  %head
-    %title Tweets for #tad012
-  %body
-    =yield
+	%head
+		%title Tweets for #tad012
+		%link{:rel => 'stylesheet', :href => '/styles.css'}
+	%body
+	=yield
+
+	%a{:href => 'https://github.com/turkuagileday/twitterpersister'}
+		%img{:style =>'position: absolute; top: 0; right: 0; border: 0;', :src => 'https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png', :alt => 'Fork me on GitHub'}
