--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,8 @@
 	%head
 		%title Tweets for #tad012
 		%link{:rel => 'stylesheet', :href => '/styles.css'}
+		%script{:src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'}
+		%script{:src => '/index.js'}
 	%body
 	=yield
 
