--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,7 @@
 	%head
 		%title Tweets for #tad012
 		%link{:rel => 'stylesheet', :href => '/styles.css'}
+		%link{:href => 'http://fonts.googleapis.com/css?family=Kreon:400,700', :rel=> 'stylesheet', :type=>'text/css'}
 		%script{:src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'}
 		%script{:src => '/index.js'}
 	%body
